--- a/server/pom.xml
+++ b/server/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<artifactId>oxnotify</artifactId>
 		<groupId>org.gluu</groupId>
-		<version>3.1.4-SNAPSHOT</version>
+		<version>3.1.4.Final</version>
 	</parent>
 
 	<build>
